# netease-ratui

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TESTING.md  nextest.toml
.cargo/: config.toml
.claude/: settings.local.json
.factory/: init.sh  services.yaml
.factory/skills/ui-worker/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: PLAYER_NEXT_BUG_ANALYSIS.md  error_handling.md  release_plan_v0.0.8.md
screenshots/: README.md
src/: api_worker.rs  app.rs  audio_worker.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  settings.rs  tui.rs
src/app/: mod.rs  parsers.rs  play_queue.rs  state.rs
src/audio_worker/: cache.rs  download.rs  engine.rs  fade.rs  messages.rs  mod.rs  null_engine.rs  player.rs  streaming.rs  transfer.rs  worker.rs
src/core/: effects.rs  mod.rs  reducer.rs  utils.rs
src/core/infra/: mod.rs  next_song_cache.rs  preload.rs  request_tracker.rs
src/core/prelude/: app.rs  audio.rs  effects.rs  infra.rs  messages.rs  mod.rs  netease.rs  utils.rs
src/core/reducer/: login.rs  lyrics.rs  player.rs  playlists.rs  search.rs  settings.rs  ui.rs
src/domain/: ids.rs  mod.rs  model.rs
src/error/: app.rs  audio.rs  cache.rs  download.rs  message.rs  mod.rs  netease.rs  player_state.rs
src/features/: mod.rs
src/features/login/: mod.rs
src/features/logout/: mod.rs
src/features/lyrics/: mod.rs
src/features/player/: audio.rs  control.rs  mod.rs  playback.rs
src/features/playlists/: mod.rs  tracks.rs
src/features/search/: mod.rs
src/keybindings/: config.rs  mod.rs  resolver.rs
src/messages/: app.rs  mod.rs  source.rs
src/netease/: actor.rs  client.rs  crypto.rs  mod.rs  util.rs
src/player_state/: mod.rs  store.rs
src/settings/: mod.rs  store.rs
src/source/: hub.rs  mod.rs
src/tui/: event_loop.rs  guard.rs  keyboard.rs  login_view.rs  lyrics_view.rs  mouse.rs  player_status.rs  playlists_view.rs  search_view.rs  settings_view.rs  utils.rs  views.rs  widgets.rs
src/ui/: cli.rs  mod.rs  tui.rs
src/usecases/: actor.rs
tests/: player_reload.rs  quit_persistence.rs  search_playback.rs
tests/settings/: mod.rs
(+66 files in other folders)
